--- a/package.json
+++ b/package.json
@@ -1,15 +1,49 @@
 {
   "name": "idea_pool",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/",
+    "roots": [
+      "spec/javascript"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "app/javascript/packs"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "moduleNameMapper": {
+      "hack-node-fetch": "node-fetch",
+      "node-fetch": "fetch-vcr"
+    }
+  },
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^16.13.0",
+    "react-router": "^5.1.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "babel-jest": "^25.1.0",
+    "fetch-vcr": "^3.2.0",
+    "jest": "^25.1.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
