--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "jsx"
     ],
     "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest"
     },
     "moduleNameMapper": {
       "hack-node-fetch": "node-fetch",
@@ -27,6 +27,7 @@
     }
   },
   "dependencies": {
+    "@babel/preset-react": "^7.8.3",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.0",
@@ -36,14 +37,19 @@
     "@rails/webpacker": "4.2.2",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
+    "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@testing-library/react": "^10.0.0",
     "babel-jest": "^25.1.0",
     "fetch-vcr": "^3.2.0",
     "jest": "^25.1.0",
+    "react-test-renderer": "^16.13.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
